--- a/index.html
+++ b/index.html
@@ -57,23 +57,6 @@ body {
   text-align: center;
 }
 
-/* GitHub icon */
-.github {
-  display: inline-block;
-  margin-bottom: 12px;
-}
-
-.github svg {
-  width: 40px;
-  height: 40px;
-  fill: var(--text);
-  transition: 0.3s;
-}
-
-.github:hover svg {
-  opacity: 0.7;
-}
-
 .avatar {
   width: 120px;
   height: 120px;
@@ -105,7 +88,6 @@ h1 {
   opacity: 0.85;
 }
 
-/* by 7n0z text */
 .by {
   margin-top: 22px;
 }
@@ -125,15 +107,14 @@ h1 {
 
 <div class="card">
 
+  <!-- غير رابط الصورة أو احذفها إذا ما تبغى صورة نهائيًا -->
+  <img src="https://i.imgur.com/your-image.png" class="avatar">
 
-  <!-- غير الصورة -->
-  <img src="https://files.catbox.moe/wl4nj5.webp" class="avatar">
+  <h1>MY ACCOUNTS</h1>
 
-  <h1>My Accounts</h1>
-
-  <a class="btn" href="https://discord.com/users/1360956507293876436" target="_blank">Discord</a>
-  <a class="btn" href="https://discord.gg/lander" target="_blank">Lander Community</a>
-  <a class="btn" href="https://www.roblox.com/ar/users/1791638867/profile?friendshipSourceType=PlayerSearch" target="_blank">Roblox</a>
+  <a class="btn" href="https://discord.com/users/1360956507293876436" target="_blank">DISCORD</a>
+  <a class="btn" href="https://discord.gg/YOUR_SERVER" target="_blank">VALO STORE</a>
+  <a class="btn" href="https://www.roblox.com/users/YOUR_ID/profile" target="_blank">ROBLOX</a>
 
   <div class="by">
     <a href="https://discord.com/users/1360956507293876436" target="_blank">
