--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ h1 {
 
   <h1>MY ACCOUNTS</h1>
 
-  <a class="btn" href="https://discord.com/users/1360956507293876436" target="_blank">DISCORD</a>
-  <a class="btn" href="https://discord.gg/YOUR_SERVER" target="_blank">VALO STORE</a>
-  <a class="btn" href="https://www.roblox.com/users/YOUR_ID/profile" target="_blank">ROBLOX</a>
+  <a class="btn" href="https://discord.com/users/1360956507293876436" target="_blank">Discord</a>
+  <a class="btn" href="https://discord.gg/YOUR_SERVER" target="_blank">Lander Community</a>
+  <a class="btn" href="https://www.roblox.com/users/YOUR_ID/profile" target="_blank">Roblox</a>
 
   <div class="by">
     <a href="https://discord.com/users/1360956507293876436" target="_blank">
