--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@ h1 {
   <!-- غير رابط الصورة أو احذفها إذا ما تبغى صورة نهائيًا -->
   <img src="https://i.imgur.com/your-image.png" class="avatar">
 
-  <h1>MY ACCOUNTS</h1>
+  <h1>My Accounts</h1>
 
   <a class="btn" href="https://discord.com/users/1360956507293876436" target="_blank">Discord</a>
-  <a class="btn" href="https://discord.gg/YOUR_SERVER" target="_blank">Lander Community</a>
-  <a class="btn" href="https://www.roblox.com/users/YOUR_ID/profile" target="_blank">Roblox</a>
+  <a class="btn" href="https://discord.gg/lander" target="_blank">Lander Community</a>
+  <a class="btn" href="https://www.roblox.com/ar/users/1791638867/profile?friendshipSourceType=PlayerSearch" target="_blank">Roblox</a>
 
   <div class="by">
     <a href="https://discord.com/users/1360956507293876436" target="_blank">
