--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ h1 {
 <div class="card">
 
   <!-- غير رابط الصورة أو احذفها إذا ما تبغى صورة نهائيًا -->
-  <img src="https://files.catbox.moe/wl4nj5.webp" class="avatar">
+  <img src="avatar.png" class="avatar">
 
   <h1>My Accounts</h1>
 
